;;
;; Sveetch Django app sample package
;;
[metadata]
name = dr-dump
version = 2.0.0-pre.1
description = A Django data dump script generator
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = dthenon@emencia.com
url = https://github.com/emencia/dr-dump
license = MIT
keywords = Python Django
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.1
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    factory-boy
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py36-django{21,22,30,31}-cms

[testenv]

deps =
    django21: Django>=2.1,<2.2
    django22: Django>=2.2,<2.3
    django30: Django>=3.0,<3.1
    django31: Django>=3.1,<3.2

commands =
    pip install -e .[dev]
    pytest -vv tests
